--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <!-- ----- SECCIÓN HOME ----- -->
         <div id="home-section">
             <div class="hero">
-                <div class="star left">✦</div>
+                <div class="star left">⚡</div>
                 <h1>Hi. I'm Eduardo.<br>A Engineer.</h1>
-                <div class="star right">✦</div>
+                <div class="star right">⚡</div>
                 <p>I'm passionate about creating new alternatives to solve problems.</p>
             </div>
 
