--- a/index.html
+++ b/index.html
@@ -322,8 +322,8 @@
             <div class="footer-content">
                 <p>© 2025 Eduardo • Engineer</p>
                 <div class="footer-links">
-                    <a href="https://github.com/TU_USUARIO" target="_blank">GitHub</a>
-                    <a href="https://www.linkedin.com/in/TU_USUARIO" target="_blank">LinkedIn</a>
+                    <a href="https://github.com/" target="_blank">GitHub</a>
+                    <a href="https://www.linkedin.com/in/" target="_blank">LinkedIn</a>
                     <a href="#" id="contact-footer">Contacto</a>
                 </div>
             </div>
